SERVER-50830 fix unchecked dynamic cast